--- a/vn/index.html
+++ b/vn/index.html
@@ -78,7 +78,7 @@ gtag("config", "GT-KDBK4K2");
     <ul class="c-header__menu">
                <li class="c-header__menu-item">
           <a class="c-header__menu-link js-menu-link" href="/vn/#about" data-id="about">
-            Về chúng tôi
+            Về chúng tôiiiiii
           </a>
         </li>
                <li class="c-header__menu-item">
